--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,2 +1,24 @@
-<app-date-select (change)="onDateChange()"></app-date-select>
-<app-map [data]="heatMapData"></app-map>
+<!-- <app-date-select (change)="onDateChange($event)"></app-date-select>
+<div fxLayout="row" fxLayoutAlign="center start" style="height:900px;">
+    <div style="height:900px;">
+        <app-map [data]="heatMapData" style="height:900px;"></app-map>
+    </div>
+</div> -->
+
+<!-- <div fxLayout='column' class="zero">
+
+    <div fxFlex="33" class="one" ></div>
+    <div fxFlex="33" fxLayout="row" class="two">
+  
+      <div fxFlex="22"    fxFlex.md="10px" fxHide.lg                       class="two_one">xzc</div>
+      <div fxFlex="205px" fxFlex.md="65"                                    class="two_two">xzcxz</div>
+      <div fxFlex="30px"  fxFlex.md="25" class="two_three">cxzcxz</div>
+  
+    </div>
+    <div fxFlex class="three"></div>
+  
+  </div> -->
+  <app-date-select (change)="onDateChange($event)"></app-date-select>
+
+        <app-map [data]="heatMapData" style="height:900px;"></app-map>
+   
