--- a/FrontEnd/src/app/date-select/date-select.component.html
+++ b/FrontEnd/src/app/date-select/date-select.component.html
@@ -1,7 +1,5 @@
 <mat-form-field>
-    <input matInput [ngxMatDatetimePicker]="picker" [(ngModel)]="inputDate" (change)="inputDate" placeholder="Choose a date">
+    <input #dateTimeInput matInput [ngxMatDatetimePicker]="picker" (dateChange)="dateChangeEvent.emit(dateTimeInput.value)" placeholder="Choose a date">
     <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
     <ngx-mat-datetime-picker #picker></ngx-mat-datetime-picker>
  </mat-form-field>
-
- {{inputDate}}
