click to add marker

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -18,7 +18,9 @@
     <div fxFlex class="three"></div>
   
   </div> -->
-  <app-date-select (change)="onDateChange($event)"></app-date-select>
+<div style="margin: 20px;">
+    <app-date-select (change)="onDateChange($event)"></app-date-select>
+    <app-map [data]="heatMapData" style="height:900px;"></app-map>
+</div>
 
-        <app-map [data]="heatMapData" style="height:900px;"></app-map>
    
