created stub for backend fuckup

--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="margin: 20px;">
-    <h1 class="mat-display-4" style="margin: auto; text-align: center;">Oracop</h1>
+    <h1 class="mat-display-4" style="margin:1%; text-align: center;">Oracop</h1>
+    <app-map [data]="heatMapData" style="height:700px;"></app-map>
     <app-date-select (change)="onDateChange($event)"></app-date-select>
-    <app-map [data]="heatMapData" style="height:900px;"></app-map>
 </div>
 
    
